--- a/src/input.css
+++ b/src/input.css
@@ -5,6 +5,35 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer utilities {
+
+    .cs-fs-badge {
+            @apply text-[0.65rem]
+    }
+
+    .cs-fs-xs {
+        @apply text-base sm:text-sm
+    }
+
+    .cs-fs-sm {
+        @apply text-lg sm:text-base
+    }
+
+    .cs-fs-base {
+        @apply text-xl sm:text-[1.25rem]
+        /* "xl": "1.25rem" */
+    }
+
+    .cs-fs-lg {
+        @apply text-2xl sm:text-2xl
+    }
+
+    .cs-fs-xl {
+        @apply text-3xl sm:text-3xl
+    }
+}
+
 @layer components {
 
     /* whole navbar features (desktop & mobile) */
@@ -50,20 +79,18 @@
             ml-2 /* [param] left margin of logo (desktop, mobile) */
             mr-auto /* for mobile, this must be set */
             md:mr-0 /* [param] right margin of logo (desktop) */
-            md:min-w-32
-            lg:min-w-32;
+            min-w-56
+            sm:min-w-56
     }
-
-
     /* L1, L2, L3 menu items features (desktop & mobile) */
     .cs-menu-item {
         @apply 
             relative
             w-full 
             font-serif /* [param] font family for public menu items (desktop & mobile) */
-            text-sm /* [param] font size for public menu items (desktop & mobile) */
-            md:text-xs
-            lg:text-sm
+            font-medium
+            cs-fs-base /* [param] font size for public menu items (desktop & mobile) */
+            md:cs-fs-xs
             tracking-normal /* [param] letter spacing for public menu items (desktop & mobile) */
             uppercase /* [param] words case for public menu items (desktop & mobile) */
             md:w-auto;
@@ -116,7 +143,7 @@
     /*  L1, L2, L3 menu items height  (desktop & mobile)*/
     .cs-menu-voice-item,
     .cs-mobile-menu-auth-item {
-        @apply h-10; /* [param] height of container of individual menu item for public menu (desktop & mobile) */
+        @apply h-16 sm:h-14; /* [param] height of container of individual menu item for public menu (desktop & mobile) */
     }
 
     /*  L1, L2, L3 menu items features (desktop & mobile)*/
@@ -177,14 +204,14 @@
             mr-2 /* [param] right margin of the auth 'block' and dropdown user menu (mobile) */
             md:mr-2 /* [param] right margin of the auth 'block' and dropdown user menu (desktop) */
             md:min-w-8
-            lg:min-w-56; /* [param] the minimum width of the of the auth 'block': : must not be too small to have the desired effect of not making L1 items change position if user is logged or not */
+            lg:min-w-40; /* [param] the minimum width of the of the auth 'block': : must not be too small to have the desired effect of not making L1 items change position if user is logged or not */
     }
 
     /* menu auth block (desktop) */
     .cs-menu-auth-icon {
         @apply
             md:ml-2 /* [param] gap between icons and words next to them (desktop) */
-            h-5
+            h-6
             lg:h-6; /* [param] size of the two auth icons */
     }
 
@@ -196,29 +223,27 @@
     /* menu auth items (desktop) */
     .cs-menu-auth-item {
         @apply
-
             font-sans /* [param] (desktop) */
             font-medium /* [param] (desktop) */
             uppercase /* [param] (desktop) */
+            cs-fs-xs /* [param] (desktop) */
     }
 
     .cs-menu-auth-item span {
         @apply
-          md:hidden
-          lg:inline-block;
+          md:hidden lg:inline-block;
     }
 
     /* testimonials badge (desktop) */
     .cs-testimonials-badge {
         @apply
-        md:hidden
-        lg:inline-block
-        -right-10 /* [param] */
+        inline-block
+        -right-11 /* [param] */
         -top-3.5 /* [param] */
         bg-cs-red-main /* [param] */
-        px-1 /* [param] */
+        px-1.5 /* [param] */
         py-0 /* [param] */
-        text-cs-badge  /* ??? We will remove this once we define better typography */
+        cs-fs-badge  /* ??? We will remove this once we define better typography */
         text-white; /* [param] */
     }
 
@@ -236,7 +261,7 @@
     .cs-logged-name {
         @apply
         text-black /* [param] */
-        text-cs-badge; /* [param] */
+        cs-fs-xs; /* [param] */
     }
 
     /* user menu outer container (desktop, mobile) */
@@ -245,7 +270,7 @@
             right-0 /* [param] (desktop, mobile) */
             top-12 /* [param] (desktop, mobile) */
             z-10
-            w-[190px] /* [param] (desktop, mobile) */
+            w-[300px] /* [param] (desktop, mobile) */
             rounded-xl
             bg-white
             shadow-cs-all-around
@@ -260,18 +285,19 @@
             justify-start
             gap-3 /* [param] (desktop, mobile) */
             px-4 /* [param] (desktop, mobile) */
-            py-3 /* [param] (desktop, mobile) */
-            text-sm
+            py-5 /* [param] (desktop, mobile) */
             text-white /* [param] (desktop, mobile) */
             rounded-tl-xl
             rounded-tr-xl
             bg-cs-blue-light; /* [param] (desktop, mobile) */
     }
 
-    /* user menu items continer (desktop, mobile) */
+    /* user menu items container (desktop, mobile) */
     .cs-menu-logged-items {
         @apply
-            text-xs
+            cs-fs-sm
+            sm:cs-fs-xs
+            font-medium             
             tracking-wider /* [param] (desktop, mobile) */
             uppercase /* [param] (desktop, mobile) */
             bg-cs-paper /* [param] (desktop, mobile) */
@@ -282,8 +308,10 @@
     .cs-menu-logged-item a {
         @apply
         px-4 /* [param] (desktop, mobile) */
-        pt-2.5 /* [param] (desktop, mobile) */
-        pb-2 /* [param] (desktop, mobile) */
+        pt-4 /* [param] (desktop, mobile) */
+        pb-2.5 /* [param] (desktop, mobile) */
+        sm:pt-3.5 /* [param] (desktop, mobile) */
+        sm:pb-2 /* [param] (desktop, mobile) */
         border-b /* [param] (desktop, mobile) */
         border-cs-blue-light/15 /* [param] (desktop, mobile) */
         hover:bg-gray-100 /* [param] (desktop, mobile) */
@@ -298,11 +326,11 @@
     /* user menu logout container */
     .cs-menu-logged-bottom {
         @apply 
-            h-10 /* [param] (desktop, mobile) */
+            h-14 /* [param] (desktop, mobile) */
             px-4 /* [param] (desktop, mobile) */
             py-1
-            text-xs
-            font-semibold /* [param] (desktop, mobile) */
+            cs-fs-sm
+            font-medium /* [param] (desktop, mobile) */
             uppercase /* [param] (desktop, mobile) */
             rounded-bl-xl
             rounded-br-xl
@@ -362,7 +390,7 @@
             text-white /* [param] (mobile) */
             rounded-full /* [param] (mobile) */
             bg-cs-red-main /* [param] (mobile) */
-            text-cs-badge; 
+            cs-fs-badge; 
     }
 
     /* public menu auth items (mobile) */
@@ -396,8 +424,14 @@
     .cs-mobile-menu ul ul  .cs-menu-voice-item {
         @apply pl-12; /* [param] L3 menu items indentation (mobile) */
     }
+
+    .cs-quicklinks>a {
+        @apply sm:ml-5;
+    }
+
+  
+
 }
 
-.cs-quicklinks>a {
-    @apply sm:ml-5;
-}
+
+
